--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -17,8 +17,8 @@
 %\setlength{\belowdisplayskip}{-5pt}
 
 \newcommand{\name}{Bundler\xspace}
-\newcommand{\inbox}{in-box\xspace}
-\newcommand{\outbox}{out-box\xspace}
+\newcommand{\inbox}{\textit{send-box}\xspace}
+\newcommand{\outbox}{\textit{receive-box}\xspace}
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge}
 \author{Paper 91, \pageref{p:end} pages}
