--- a/impl.tex
+++ b/impl.tex
@@ -26,6 +26,7 @@ Additionally, we remove one line in the rate update to disable re-filling the to
 We implement the \inbox control plane to run in user-space in $1167$ lines of Rust. 
 It uses \texttt{libnl} to communicate with the qdisc, and \texttt{libccp}~\cite{ccp} to communicate with the congestion control algorithm via Unix-domain sockets.
 It maintains the congestion control state of each bundle, but does not maintain (or observe) per-flow state.
+\radhika{no. of LoC for \inbox dataplane?}
 
 We implement the \outbox using \texttt{libpcap} in $188$ lines of Rust. It listens for packets on the interface, checks for epoch packets, and sends the reports to the \inbox. It must maintain per-bundle counters (described in \S\ref{s:impl:discovery}).
 
@@ -92,6 +93,7 @@ Then, using the elasticity detection mechanism described in prior work~\cite{nim
 \an{move the elastic cross traffic comparison results here?} \radhika{no, add a forward pointer}
 
 \subsection{Bundle Initialization}\label{s:impl:discovery}
+
 One practical concern in a \name deployment is how the \inbox and \outbox discover each others' presence. Of course, it is always possible to statically configure an \inbox and \outbox; however, this may be impractical as they reside in different networks.
 Rather, we propose a bootstrapping mechanism wherein \name forms aggregates in response to observed packets.
 This mechanism classifies packets traversing the \inbox and \outbox as either non-bundled (should be transmitted immediately and not paced in the qdisc) or bundled in a given qdisc. Different bundles may have different rates; recent work~\cite{carousel, eifel} has shown it is possible to implement such multi-rate, multi-scheduler datapaths efficiently.
